<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="button_action_CE">CE</string>
    <string name="button_action_C">CLR</string>
    <string name="button_acttion_StoD">S↔D</string>
    <string name="button_action_BACK">⌫</string>
    <string name="button_action_equal">=</string>
    <string name="button_action_shift">⌂</string>
    <string name="button_action_ans">Ans</string>
    <string name="button_action_result">Kết quả</string>
    <string name="button_action_refresh">Nhập lại</string>
    <string name="button_numpad_7">7</string>
    <string name="button_numpad_4">4</string>
    <string name="button_numpad_1">1</string>
    <string name="button_numpad_8">8</string>
    <string name="button_numpad_5">5</string>
    <string name="button_numpad_2">2</string>
    <string name="button_numpad_9">9</string>
    <string name="button_numpad_6">6</string>
    <string name="button_numpad_3">3</string>
    <string name="button_numpad_0">0</string>
    <string name="button_numpad_Dot">.</string>
    <string name="button_numpad_mongoac">(</string>
    <string name="button_numpad_dongngoac">)</string>
    <string name="button_numpad_do">º</string>
    <string name="button_numpad_e">e</string>
    <string name="button_numpad_pi">π</string>
    <string name="button_math_mod">%</string>
    <string name="button_math_SQRT">√</string>
    <string name="button_math_can3">³√</string>
    <string name="button_math_pow2">x²</string>
    <string name="button_math_pow3">x³</string>
    <string name="button_math_divideX">⅟ₓ</string>
    <string name="button_math_divide">÷</string>
    <string name="button_math_multiply">×</string>
    <string name="button_math_minus">−</string>
    <string name="button_math_plus">+</string>
    <string name="button_math_DaoDau">±</string>
    <string name="button_math_sin">sin</string>
    <string name="button_math_cos">cos</string>
    <string name="button_math_tan">tan</string>
    <string name="button_math_cot">cot</string>
    <string name="button_math_abs">|x|</string>
    <string name="button_math_hoanvi">HV</string>
    <string name="button_math_chinhhop">CH</string>
    <string name="button_math_tohop">TH</string>
    <string name="button_math_10muN">10ⁿ</string>
    <string name="buttun_math_canN">ⁿ√</string>
    <string name="button_math_xMuN">xⁿ</string>
    <string name="button_math_giaithua">x!</string>
    <string name="button_math_phanso">a/b</string>
    <string name="button_math_log">log</string>
    <string name="button_math_ln">ln</string>
    <string name="button_Math_mu">^</string>
    <string name="title_activity_test">Test</string>
    <string name="button_action_next"><![CDATA[->]]></string>
    <string name="button_action_prev"><![CDATA[<-]]></string>
</resources>
