<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/layout_output"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:background="@drawable/linearlayoutboder"
        android:layout_above="@+id/layout_numpad"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <com.example.applycation.calculator.autoResizeText.AutoResizeTextView
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:textSize="150sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="5 x 5 = 25"
            android:id="@+id/text_SmallResult"
            android:textColor="#000000" />

        <com.example.applycation.calculator.autoResizeText.AutoResizeTextView


            android:gravity="right"
            android:textSize="400sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="25"
            android:textStyle="bold"
            android:id="@+id/text_Result"
            android:textColor="#000000"
            android:background="#ffffff"
            android:layout_weight="3" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/layout_numpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:weightSum="35"
        >
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_sin"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_numpad_sin"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_cos"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_numpad_cos"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_tan"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_numpad_tan"
                android:textSize="@dimen/normalbuttontextsize" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_cot"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_numpad_cot"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_action_shift"
                android:background="@drawable/boder"
                android:id="@+id/button_action_shift"
                android:textSize="@dimen/normalbuttontextsize" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_phanso"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_phanso"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_divideX"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_divideX"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_mod"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_phanTram"
                android:textSize="@dimen/normalbuttontextsize" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_mongoac"
                android:background="@drawable/boder"
                android:id="@+id/button_numpad_mongoac"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_dongngoac"
                android:background="@drawable/boder"
                android:id="@+id/button_numpad_dongngoac"
                android:textSize="@dimen/normalbuttontextsize" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_Math_mu"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_mu"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_action_CE"
                android:background="@drawable/boder"
                android:id="@+id/button_action_CE"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_action_C"
                android:background="@drawable/boder"
                android:id="@+id/button_action_C"
                android:textSize="@dimen/normalbuttontextsize" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_action_BACK"
                android:background="@drawable/boder"
                android:id="@+id/button_action_back"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_divide"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_divide"
                android:textSize="@dimen/normalbuttontextsize" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_can3"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_can3"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_7"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_7"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_8"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_8"
                android:textSize="@dimen/normalbuttontextsize" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_9"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_9"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_multiply"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_multiply"
                android:textSize="@dimen/normalbuttontextsize" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_SQRT"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_can"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_4"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_4"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_5"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_5"
                android:textSize="@dimen/normalbuttontextsize" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_6"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_6"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_minus"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_minus"
                android:textSize="@dimen/normalbuttontextsize"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_pow3"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_mu3"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_1"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_1"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_2"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_2"
                android:textSize="@dimen/normalbuttontextsize" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_3"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_3"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:background="@drawable/boder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_plus"
                android:id="@+id/button_Math_plus"
                android:textSize="@dimen/normalbuttontextsize" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_math_pow2"
                android:textAllCaps="false"
                android:background="@drawable/boder"
                android:id="@+id/button_Math_mu2"
                android:textSize="@dimen/normalbuttontextsize"/>
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_0"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_0"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_numpad_Dot"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_dot"
                android:textSize="@dimen/normalbuttontextsize" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_action_ans"
                android:background="@drawable/boder"
                android:textStyle="bold"
                android:id="@+id/button_numpad_ans"
                android:textSize="@dimen/normalbuttontextsize" />
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_action_equal"
                android:background="@drawable/boder"
                android:id="@+id/button_action_equal"
                android:textSize="@dimen/normalbuttontextsize" />
        </TableRow>

    </TableLayout>
</RelativeLayout>